# task3

client/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  server.cpp  server.h
